lab1/Test/L1-A-5-66.output
Error Type B at Line 1
Error Type A at Line 4
Error Type B at Line 54
Error Type B at Line 62
Error Type A at Line 66
