lab1/Test/L1-A-5-66.cmm
float [ 1418122637 ] 
;
int ;
struct X1KMwgN9e0OO2kW #{
  struct ze {
  }dbO9qPMdJipGPBKKK = ! - 39222917.48162122 * ! ZN 
    / - Bme * - k + ! L * EE2RcolaFKGCI / kbiB / LG8qzI9a4hMeT4nI37 
    / esGC - ! C4KTMziMkOvk_bX2mcL + - XsT1Bxt_KiU - - 
    v1BcXGUa == - AUbO1ERQTkQCzn_6HYX - _8__rR1WsSN >= 
    - pdrEytNuAkFd0pGaVq * CGXMRsXLuEs0d * ABBNvdk8hIkQQ 
    * qp / SJkM_GUtClIn4cS >= - K / OhO - GDoYWHF_F - 
    Nytw != ! VxTYCMyulsfrVB * gXoMvV1s / kf5L1M4YfFxO2c6 
    * xt5YSaA9LHs9K2YT * DKM != 1171970211 + iQe2iXGizeNuNitAdK0 
    + j6rBgr89OJOyvN + yUZ9XIOIoPDTQaPLG6J <= - dK55Gs9cgtzsOlbK 
    + nW - KXxov <= - T67xeHZvzmvXW * CAbAKO7Pfc9nLSGvT9zk 
    * yviJTvXdEdB_MHQ8t6hL / Lt8VIkOK - BDynpwlrAwIg0zWs 
    > ! wrm5b9 / F1QCWLp / y8It05kHX8aeel < ! x_ErgnpQvN8844_tBpG 
    - zI1FcLZI - z61zI - SGwMyYF8YAsU7Kjy >= - l7u6IuCCXG8NoeML1xiQ 
    - JgH2Ui9x_WHYrAgU9Ns == ! NK53OUJbV5N * zMsFLOAOMjQSXmaH3 
    * HRshyvgZSAb / rw4c9WciQHtV / pRnqp * Fk4Hngn8o7alSe9D 
    / XYPRd - WWvxXw3 - PHgHfmTYjXc9 + qbHrpN6pkUq >= 
    ! ginV7er1ac_ * n1FT / rV8qohRc != ! GtSSQE0dmRm12H48Y 
    == nrfhGYbEnqG ( ) * He7mvuQl2NUzXjyV_k * f56dbrT6 
    * Q > ! GyG2J7JGjB * zyDHWRivQ6UWv + x2JLnER7o4F0 
    - LpMLbZzgBz + Yv7fXXoINxvhCK + Kzz0UYnYo_hNcRnZ + 
    AC1lY1jZ >= - fD4uLvBxeBPvAmMLZDU / Twc / stnN0iZXvf 
    - yTc - Tryk - MAknFP >= 590797868 . tbof + hO + UCDZPC 
    + BrfIvjR - cYJ > ! ysm84Ks8gq3t / Tly / hDx_I8 / 
    tDDBNNxteJ86nV3m / NwJibu * VKl5ku / LClQ4R / jq7Ll_6tOEKQWVTiMWdk 
    / qf7LA4Jtp8CFh * j63yiZHtcsl * ZlqkN2T - lahScLSx9 
    < ! Ov3VCNKLXfWrMn6l * aHJEQK7uMWYwXeEcvA >= - n_IyjU 
    / _bEPc0EXbrkqs6 / aNIruoEcDRcx * l / tzp * CGbz_ 
    / CoTpnc6zt * s7rWSH / Ae / v4K1TfouU * z28VpUdlWbJau 
    / En9nyK0GzNRMS6qo / tzWt6e7A * XIJ * FZlpes * EtREpxW6PgmL 
    / BanPEw > ! cyq < - XENXGi60nUz66TsTsvq - SLUpwxZKfIQpStOije 
    >= - vB_B76mFAqhtcI * gM3ZD3uKNqPCYOKqSWg * Ueo2EzJptmbHhW 
    / nzV09IjW8fZH * WJ8t9egyAnTY4QXq4Wd / yaCXLYuX * 
    KgZByhuxU7bwr9_ + oPOPuaEoMpH2VNyIlPOt == ! EttIhG_LsgjFB7udJcu 
    / EZ_NNVqW3UuUNcSx * z_pq5xTXZouGZt * zQjlEJ_4 - Rs 
    == ! dDli1irGfkE3CGHRN * fdnnqJsxu + yWEz8iR7380ueQp 
    + A1lVJZAoyhhWaE + D5zwAlPgWpPsbVu2Bi || ! IcrTUQ 
    > cGZge > NsS <= H != v54br != Os23oIKhMXdYkhYY != 
    A7nAeaQNQlqGew9npfvt && Oi5iigs2J7Ue7Q || ! RIelohXrKQIQ 
    + exDQp_OblmVFQ1F - adD4 != hx8ZwKTuGjcxgj9B3g >= 
    fb0yytpPse == c9M687BU38jNxV >= GzNGag4HMxD1sb1VnY 
    > TL9Do8rsk9ha9wGW8 > uZ2nWMFBHGF != XXBPUKQ9ZgoVZ2arIW 
    <= DuS6 == ao0 && Hzo6jcsrDp6TRrCQ && kwPV2XVnV || 
    - VUmXZxiD7QrCxUbF < h0P9FG1Jia <= I <= lhlwOMK0 != 
    zDSrH1P12fPlX1Qabw == FCUaKJBon4 || ! F4DmwdmfkyxdBYsTpF 
    * PBrsBoI9ml9Yu0j1 / J3yILI1esZTCLbWim / rYvuInKY2kxqa7rIaQ 
    * xF0YzUluGV * N4qrQMKy2NbIe / d4y4XJQkC0 + GzaJ - 
    _a4nWA2mGV6ogHYytTqe - ugTwS == f > wY7 || zudWISBi1W 
    ( k ) . CaaHO_5T9b . rPSNmvMH115 * Ymg4ks4 - eHP8xJqBuIT_N5 
    - f0mFzxS_ama3YRLn + <= ehrLkpBQGm2MRSC != E3aqV >= 
    unfa2GrWpfG00Y0Z9dxD ;
}bBQLZPPDt3U0VMVrb8op ( struct Ts6ssM l6JAo7q ) {
  while ( ! - - bbXyag * - bMOATFsA0yw2pemi - - mu 
    < ! mvg7c0Vw550JE - GAgVN0xsEb == - TJT * WvpWPPORrP4zOEpqRVXu 
    * oPpIJPwAlKyo8Nb / LQAG8xvC1cMdqk / UC01In7dz / f_EHTmmoJ7wUQ 
    * X6izgHluVDBP / Wv8 - oZnptj4o5ukmL5URHx + jPgO09m_KFmQv 
    - g2bIeNb0F7S7ZB8qrW - B3UdE__u32hacl3JbN + Mgke5J0UWzGKNCoMGW3 
    - lZq8RadKsDhL72LNiX0 - sWZ + )   719215742.1722384551 
    = GThWiZsXsHb1_8LR ;

}
: